--- a/templates/message.html
+++ b/templates/message.html
@@ -1,1 +1,3 @@
-<div class="message" id="m{{ message["id"] }}">{% module linkify(message["body"]) %}</div>
+<div class="message" id="m{{ message["id"] }}">{% module linkify(message["word"]) %}
+    {% module linkify(message["abbr"]) %}
+    {% module linkify(message["src"]) %}</div>
