--- a/templates/message.html
+++ b/templates/message.html
@@ -1,3 +1,2 @@
 <div class="message" id="m{{ message["id"] }}">{% module linkify(message["word"]) %}
-    {% module linkify(message["abbr"]) %}
-    {% module linkify(message["src"]) %}</div>
+    {% module linkify(message["abbr"]) %} {% module linkify(message["src"]) %}</div>
