--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="{{ static_url("chat.css") }}" type="text/css">
 
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" type="text/javascript"></script>
+   <script src="{{ static_url("flexible.js") }}" type="text/javascript"></script>
    <script src="{{ static_url("chat.js") }}" type="text/javascript"></script>
 
  </head>
@@ -24,7 +25,7 @@
            <tr>
              <td><input type="text" name="body" id="message" style="width:500px;height:16px"></td>
              <td style="padding-left:5px">
-               <input type="submit" value="{{ _("Post") }}">
+               <input type="submit" value="{{ _("提交") }}">
                <input type="hidden" name="next" value="{{ request.path }}">
                {% module xsrf_form_html() %}
              </td>
