--- a/templates/d.html
+++ b/templates/d.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Scrabble Cheat</title>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" type="text/javascript"></script>
+  <script src="{{ static_url("jquery.min.js") }}" type="text/javascript"></script>
   <script src="{{ static_url("flexible.js") }}" type="text/javascript"></script>
   <script src="{{ static_url("chat.js") }}" type="text/javascript"></script>
   <style>
@@ -22,23 +22,24 @@
       height: 8vw;
     }
 
-    #all {
-      width: 60vw;
-    }
-
-    .cons,
-    .src {
+    .condition,
+    .candidate {
       display: flex;
       align-items: left;
     }
 
-    .cons input {
+    .candidate input {
+      display: block;
+      width: 70%;
+    }
+
+    .condition input {
       display: block;
       width: 30%;
     }
 
     #btn {
-      width: 30vw;
+      width: 30%;
       height: 9vw;
       line-height: 10vw;
       background: green;
@@ -53,14 +54,14 @@
   <div id="body">
     <div id="input">
       <form action="#" method="post" id="messageform">
-        <div class="src">
+        <div class="candidate">
           <input type="text" name="body" id="message" placeholder="输入英文字母" >
           <input id='btn' type="submit" value="{{ _("提交") }}">
           <!-- <div id='btn' onClick="document.forms['messageform"].submit();'>提交</div> -->
           <input type="hidden" name="next" value="{{ request.path }}">
           {% module xsrf_form_html() %}
         </div>
-        <div class="cons">
+        <div class="condition">
           <input type="text" name='prefix' placeholder="开头" />
           <input type="text" name='contains' placeholder="包含"  />
           <input type="text" name='postfix' placeholder="结尾"  />
